--- a/index.html
+++ b/index.html
@@ -2,12 +2,13 @@
  <html>
   <head>
     <title>Above & Beyond</title>
-    <link href="css/stylesheet.css" rel="stylesheet" type="text/css" media="all"
+    <link href="css/styles.css" rel="stylesheet" type="text/css" media="all"
   </head>
   <body>
     <h1>ABOVE & BEYOND</h1>
     <h2>Tour Dates</h2>
     <h3>2018: Europe</h3>
+    <img class="logo" src="img/above_and_beyond.jpg">
     <div class="sidebar">
       <ul>
         <li>26. MAI CREAMFIELDS STEEL YARD LONDON, UNITED KINGDOM</li>
@@ -18,7 +19,6 @@
         <li>11. AUG. SZIGET FESTIVAL BUDAPEST, HUNGARY</li>
         <li>25. AUG. CREAMFIELDS FESTIVALDARESBURY, UNITED KINGDOM</li>
         <li>11. AUG. SZIGET FESTIVAL BUDAPEST, HUNGARY</li>
-
       </ul>
     </div>
 
@@ -31,11 +31,13 @@
     <div class="column">
       <p>
         This is about the band's charity: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce vitae nulla dolor. Phasellus a odio ut ex gravida lacinia ut vitae magna. Fusce leo ipsum, aliquam a quam ac, accumsan rhoncus magna. In semper nibh eu ante ornare, vitae semper massa bibendum. Vivamus in ante erat. Duis maximus leo erat, in facilisis lacus tempor eget. Etiam tristique consequat nulla ut aliquet. Integer egestas leo ac imperdiet dignissim. Praesent faucibus, erat vitae aliquet ornare, erat eros bibendum dui, vel sagittis nisi massa eget lacus. Pellentesque enim tellus, varius sed leo nec, venenatis imperdiet eros. Nullam ultrices tellus ut volutpat pharetra. Nullam a consequat ante. Donec eu nisl quis lectus sagittis commodo.
+      </p>
     </div>
 
-      <img class="logo" src="img/above_and_beyond.jpg">
-    <div class="right column">
+
+    <div class="column">
         <p>Quisque eu dui imperdiet, imperdiet sem quis, blandit nibh. Vestibulum gravida iaculis orci, vel pretium tortor finibus tempus. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Interdum et malesuada fames ac ante ipsum primis in faucibus. Curabitur et lobortis nisl. Donec eget est quis turpis elementum iaculis. Etiam ut cursus est. Integer in commodo mi. Suspendisse tristique vehicula sem vitae convallis. Pellentesque consequat accumsan dictum. Ut turpis justo, fermentum ut tristique at, eleifend eget odio. Nullam feugiat id augue non lobortis. Morbi vitae leo faucibus, consectetur risus quis, aliquam mauris. Proin a diam mauris. Morbi tincidunt faucibus libero, ac cursus metus fermentum ut. Suspendisse tincidunt euismod iaculis. Maecenas blandit a metus non pretium. Integer sed dignissim lacus. Nullam gravida pretium consectetur. Maecenas turpis nisl, mollis a porttitor non, porttitor nec nisl. Donec condimentum, eros vel fermentum facilisis, ligula lorem vulputate ante, sed iaculis enim elit vitae velit. Sed sed augue nulla. Aenean sit amet ullamcorper leo, vitae sodales massa. Etiam consequat tempor dui. Ut a ullamcorper urna. Nullam aliquam, ipsum malesuada maximus sodales, turpis mauris blandit arcu, sagittis placerat diam tellus at tellus. Nam quis euismod odio. Cras eu felis est</p>
-   </div>
+    </div>
+
   </body>
  </html>
