--- a/index.html
+++ b/index.html
@@ -5,38 +5,40 @@
     <link href="css/styles.css" rel="stylesheet" type="text/css" media="all"
   </head>
   <body>
-    <h1>ABOVE & BEYOND</h1>
-    <h2>Tour Dates</h2>
-    <h3>2018: Europe</h3>
-    <img class="logo" src="img/above_and_beyond.jpg">
+    <img class="logo" src="img/above-a-beyond.png">
+    <h1>World Tour 2018</h1>
+    <h2>Europe 2018</h2>
+    <div class="column">
+      <p>
+        <strong>That is:</strong> Above & Beyond have carved out a unique space in music and culture, one that reaches far beyond their electronic roots. In so doing, Jono, Paavo and Tony have created something special: a common ground where all sorts of people and ideas can come together. Celebration, kinship, community – it’s the A&B way.<em>(english)</em>
+      </p>
+    </div>
+    <div class="column">
+      <p>
+        <strong>Das heißt:</strong> Above & Beyond haben einen einzigartigen Raum in Musik und Kultur geschaffen, der weit über ihre elektronischen Wurzeln hinausreicht. Jono, Paavo und Tony haben dabei etwas Besonderes geschaffen: eine gemeinsame Basis, auf der alle möglichen Menschen und Ideen zusammenkommen können. Feier, Verwandtschaft und Gemeinschaft - es ist der A&B Weg.<em>(german)</em>
+      </p>
+    </div>
+    <div class="column">
+      <p>
+        <strong>Ou seja:</strong> Ou seja: o Above & Beyond criou um espaço único na música e na cultura, que ultrapassa suas raízes eletrônicas. Ao fazê-lo, Jono, Paavo e Tony criaram algo especial: um terreno comum onde todos os tipos de pessoas e ideias podem se unir. Celebração, parentesco, comunidade - é o caminho A&B.<em>(portuguese)</em>
+      </p>
+    </div>
+
+    <div class="column">
+      <h3>Book Now</h3>
+    </div>
+
     <div class="sidebar">
       <ul>
-        <li>26. MAI CREAMFIELDS STEEL YARD LONDON, UNITED KINGDOM</li>
-        <li>03. JUNI AFTERHILLS MUSIC & ARTS FESTIVAL IASI, ROMANIA</li>
-        <li>07. JULI EUFORIA FESTIVAL BOSZKOWO, POLAND</li>
-        <li>14. JULI AIRBEAT ONE FESTIVAl NEUSTADT-GLEWE, GERMANY</li>
-        <li>20. JULI TOMORROWLAND FESTIVAL BOOM, BELGIUM</li>
-        <li>11. AUG. SZIGET FESTIVAL BUDAPEST, HUNGARY</li>
-        <li>25. AUG. CREAMFIELDS FESTIVALDARESBURY, UNITED KINGDOM</li>
-        <li>11. AUG. SZIGET FESTIVAL BUDAPEST, HUNGARY</li>
+        <li>26. MAI CREAMFIELDS STEEL YARD LONDON, <strong>UNITED KINGDOM</strong></li>
+        <li>03. JUNI AFTERHILLS MUSIC & ARTS FESTIVAL IASI, <strong>ROMANIA</strong></li>
+        <li>07. JULI EUFORIA FESTIVAL BOSZKOWO, <strong>POLAND</strong></li>
+        <li>14. JULI AIRBEAT ONE FESTIVAl NEUSTADT-GLEWE, <strong>GERMANY</strong></li>
+        <li>20. JULI TOMORROWLAND FESTIVAL BOOM, <strong>BELGIUM</strong></li>
+        <li>11. AUG. SZIGET FESTIVAL BUDAPEST, <strong>HUNGARY</strong></li>
+        <li>25. AUG. CREAMFIELDS FESTIVALDARESBURY, <strong>UNITED KINGDOM</strong></li>
+        <li>11. AUG. SZIGET FESTIVAL BUDAPEST, <strong>HUNGARY</strong></li>
       </ul>
-    </div>
-
-    <div class="column">
-      <p>
-        This is about the band: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce vitae nulla dolor. Phasellus a odio ut ex gravida lacinia ut vitae magna. Fusce leo ipsum, aliquam a quam ac, accumsan rhoncus magna. In semper nibh eu ante ornare, vitae semper massa bibendum. Vivamus in ante erat. Duis maximus leo erat, in facilisis lacus tempor eget. Etiam tristique consequat nulla ut aliquet. Integer egestas leo ac imperdiet dignissim. Praesent faucibus, erat vitae aliquet ornare, erat eros bibendum dui, vel sagittis nisi massa eget lacus. Pellentesque enim tellus, varius sed leo nec, venenatis imperdiet eros. Nullam ultrices tellus ut volutpat pharetra. Nullam a consequat ante. Donec eu nisl quis lectus sagittis commodo.
-      </p>
-    </div>
-
-    <div class="column">
-      <p>
-        This is about the band's charity: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce vitae nulla dolor. Phasellus a odio ut ex gravida lacinia ut vitae magna. Fusce leo ipsum, aliquam a quam ac, accumsan rhoncus magna. In semper nibh eu ante ornare, vitae semper massa bibendum. Vivamus in ante erat. Duis maximus leo erat, in facilisis lacus tempor eget. Etiam tristique consequat nulla ut aliquet. Integer egestas leo ac imperdiet dignissim. Praesent faucibus, erat vitae aliquet ornare, erat eros bibendum dui, vel sagittis nisi massa eget lacus. Pellentesque enim tellus, varius sed leo nec, venenatis imperdiet eros. Nullam ultrices tellus ut volutpat pharetra. Nullam a consequat ante. Donec eu nisl quis lectus sagittis commodo.
-      </p>
-    </div>
-
-
-    <div class="column">
-        <p>Quisque eu dui imperdiet, imperdiet sem quis, blandit nibh. Vestibulum gravida iaculis orci, vel pretium tortor finibus tempus. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Interdum et malesuada fames ac ante ipsum primis in faucibus. Curabitur et lobortis nisl. Donec eget est quis turpis elementum iaculis. Etiam ut cursus est. Integer in commodo mi. Suspendisse tristique vehicula sem vitae convallis. Pellentesque consequat accumsan dictum. Ut turpis justo, fermentum ut tristique at, eleifend eget odio. Nullam feugiat id augue non lobortis. Morbi vitae leo faucibus, consectetur risus quis, aliquam mauris. Proin a diam mauris. Morbi tincidunt faucibus libero, ac cursus metus fermentum ut. Suspendisse tincidunt euismod iaculis. Maecenas blandit a metus non pretium. Integer sed dignissim lacus. Nullam gravida pretium consectetur. Maecenas turpis nisl, mollis a porttitor non, porttitor nec nisl. Donec condimentum, eros vel fermentum facilisis, ligula lorem vulputate ante, sed iaculis enim elit vitae velit. Sed sed augue nulla. Aenean sit amet ullamcorper leo, vitae sodales massa. Etiam consequat tempor dui. Ut a ullamcorper urna. Nullam aliquam, ipsum malesuada maximus sodales, turpis mauris blandit arcu, sagittis placerat diam tellus at tellus. Nam quis euismod odio. Cras eu felis est</p>
     </div>
 
   </body>
